changed truncated navigation bar to display menu items correctly, while putting a border around every menu item to make it stand out

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -38,7 +38,7 @@ header {
 
   @media (max-width: 800px) {
     .ant-menu-item {
-      padding: 0 10px;
+      padding: 10px;
     }
   }
 }
@@ -58,6 +58,21 @@ header {
       padding: 0;
     }
   }
+
+}
+.ant-menu-inline .ant-menu-item,
+.ant-menu-inline .ant-menu-submenu-title {
+  width: 205px;
+}
+
+ #header .ant-menu-item, header .ant-menu-item {
+   padding: 2px;
+   border: 1px solid #f0f0f0;
+ }
+.ant-menu {
+  margin-bottom: 20px;
+  text-align: left;
+  padding-bottom: 20px;
 }
 
 .ant-menu-horizontal {
@@ -68,7 +83,7 @@ header {
   color: rgba(0, 0, 0, 0.65);
 }
 .ant-menu-item {
-  padding: 0 15px;
+  padding: 10px;
 }
 .disable-ant-menu-item-active {
   border-bottom: none !important;
